bad/2020-07-06/15-16/23.1/build.err
run.c: In function ‘ani’:
run.c:13:5: error: ‘else’ without a previous ‘if’
     else (below[i] == 'A' || below[i] == 'Y' || below[i]=='I'|| below[i]=='O'|| below[i]=='U'|| below[i]=='E');
     ^~~~